# HSM.c

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
examples/turnstile/: CMakeLists.txt  README.md  main.c
src/: hsm.c  hsm.h  hsm_log.h
test/: CMakeLists.txt  test_active_state.c  test_common_parent.c  test_handle_event.c  test_main.c  test_root_state.c  test_transition_to_deep_history.c  test_transition_to_shallow_history.c  test_transition_to_state.c  test_transition_to_state_with_initialize.c
test/include/: test_active_state.h  test_common_parent.h  test_handle_event.h  test_root_state.h  test_transition_to_deep_history.h  test_transition_to_shallow_history.h  test_transition_to_state.h  test_transition_to_state_with_initialize.h
